Fix nbsphinx spacing and logo link

--- a/src/pydata_sphinx_theme/assets/styles/extensions/_execution.scss
+++ b/src/pydata_sphinx_theme/assets/styles/extensions/_execution.scss
@@ -53,3 +53,10 @@ html[data-theme="dark"] .bd-content {
     }
   }
 }
+
+// NBSphinx
+// If a cell immediately precedes text (with no output cell) then add padding
+// so that we have the same spacing as paragraphs after paragraphs.
+div.nblast + p {
+  margin-top: 1rem;
+}
